--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
   <head>
-    <style>
-		body {
-			background-color: #FFECC5;
-			font-family: Arial, sans-serif;
-		}
-	</style>
+
     <meta charset="utf-8">
     <title>MonSite</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -18,7 +13,11 @@
 Le petit grain de blé a été récolté et a été transporté dans un moulin où il a été transformé en farine. Puis, cette farine a été mélangée à de l'eau et à de la levure, pétrie et enfin cuite pour devenir un délicieux pain croustillant.
 
 Ainsi, notre petit grain de blé a finalement réalisé son rêve de devenir un grand pain qui a été mangé avec joie et apprécié par des gens de tous les horizons. Et depuis lors, les grains de blé du monde entier rêvent de suivre ses traces pour devenir des pains célèbres.</p>
-    <img src="du pain.jpeg" alt="">
-  <a href="les ingridients.html" title="les ingridient utilisés pour faire du pain.html">Les ingrédients</a>
+    <img src="dupain.png" style="width:600px; position: absolute;; left :100px; top : 250px">
+    <img src="dupain2.png" style="width:565px; position: absolute;; left :800px; top : 250px">
+  <a href="les ingredients.html" title="les ingreidient utilisés pour faire du pain.html">Les ingrédients</a>
+
+  <div style="poistion: relative; top : 1000px" <h1>Titre de la section</h1>
+  <p>Ceci est un paragraphe dans la section.</p> </div>
   </body>
 </html>
