--- a/les ingredients.html
+++ b/les ingredients.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang=fr dir="ltr">
   <head>
+    <style>
+    body {
+      background-color: #FFECC5;
+      font-family: Arial, sans-serif;
+    }
+  </style>
     <meta charset="utf-8">
     <title>les ingrédients</title>
   </head>
