--- a/Formulaire.html
+++ b/Formulaire.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="formulaire.css">
-    <title></title>
+
+    <title>MonSite</title>
+    <link rel="stylesheet" type="text/css" href="styleproduit.css">
+
+
   </head>
-  <body>
+ <body>
+   <nav>
+     <ul>
+       <li><a href="index.html">Accueil</a></li>
+       <li><a href="ingredients.html">Les ingrédients</a></li>
+       <li><a href="produit.html">Produits</a></li>
+       <li><a href="formulaire.html">Contact</a></li>
+     </ul>
+   </nav>
+ </body>
+
+</html>
+
+<div class="farine">
+    <img src="farine.jpg">
+</div>
 
 
-    <form action="traitement-formulaire.php" method="POST">
-      <label for="nom">Nom :</label>
-      <input type="text" id="nom" name="nom" required><br>
+<div class=titre>
+    <h1>Nos produits :</h1>
+  </div>
 
-      <label for="email">Adresse e-mail :</label>
-      <input type="email" id="email" name="email" required><br>
+<div class="separator"></div>
 
-      <label for="sujet">Sujet :</label>
-      <input type="text" id="sujet" name="sujet" required><br>
+<div class=p1
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam maecenas ultricies mi eget. Cras tincidunt lobortis feugiat vivamus at augue. Amet est placerat in egestas erat. Sit amet cursus sit amet dictum sit. Tincidunt ornare massa eget egestas purus viverra accumsan in. Vivamus arcu felis bibendum ut. Eget dolor morbi non arcu risus. At ultrices mi tempus imperdiet nulla malesuada. Orci phasellus egestas tellus rutrum. Nibh nisl condimentum id venenatis a. Id aliquet lectus proin nibh nisl condimentum. Cursus metus aliquam eleifend mi in nulla. Turpis nunc eget lorem dolor sed. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Odio pellentesque diam volutpat commodo sed. Elementum nibh tellus molestie nunc non blandit massa enim nec.
 
-      <label for="message">Message :</label>
-      <textarea id="message" name="message" required></textarea><br>
+    Tincidunt eget nullam non nisi est sit amet facilisis. Posuere morbi leo urna molestie at elementum eu facilisis. Quis risus sed vulputate odio ut enim blandit volutpat. Volutpat consequat mauris nunc congue nisi vitae. Sagittis nisl rhoncus mattis rhoncus urna. Ornare quam viverra orci sagittis. Consectetur purus ut faucibus pulvinar. Purus viverra accumsan in nisl nisi scelerisque eu. Felis donec et odio pellentesque diam volutpat commodo sed. Augue neque gravida in fermentum et sollicitudin ac orci. Porttitor leo a diam sollicitudin tempor. Facilisis magna etiam tempor orci. Faucibus nisl tincidunt eget nullam non nisi est. Rhoncus urna neque viverra justo. Est velit egestas dui id ornare. Dignissim cras tincidunt lobortis feugiat vivamus at. Egestas egestas fringilla phasellus faucibus. In vitae turpis massa sed elementum tempus egestas sed.
 
-      <input type="submit" value="Envoyer">
+    Ornare lectus sit amet est placerat. Enim neque volutpat ac tincidunt vitae semper quis lectus nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Sagittis nisl rhoncus mattis rhoncus urna neque. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra orci. A scelerisque purus semper eget duis at. At ultrices mi tempus imperdiet nulla malesuada. Malesuada fames ac turpis egestas integer eget. Fermentum dui faucibus in ornare quam viverra orci sagittis. Amet mauris commodo quis imperdiet massa. Vehicula ipsum a arcu cursus vitae congue mauris rhoncus aenean. Urna nunc id cursus metus. Quam vulputate dignissim suspendisse in est. Habitasse platea dictumst quisque sagittis purus sit amet. Auctor eu augue ut lectus arcu bibendum at varius vel. Enim neque volutpat ac tincidunt vitae semper. Ultrices mi tempus imperdiet nulla. Purus sit amet volutpat consequat mauris nunc. Quisque egestas diam in arcu cursus. Justo laoreet sit amet cursus sit amet.
 
-      <div class="backvideo">
-        <video autoplay loop muted>
-          <source src="back.mp4" type="video/mp4">
-        </video>
-      </div>
+    Tristique senectus et netus et malesuada fames. Aliquam ultrices sagittis orci a scelerisque. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Ultricies mi eget mauris pharetra et ultrices neque. Quam pellentesque nec nam aliquam sem et. Convallis a cras semper auctor neque. Scelerisque varius morbi enim nunc. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Diam vulputate ut pharetra sit amet aliquam id diam. Mi bibendum neque egestas congue quisque.
 
+    Ultrices sagittis orci a scelerisque purus semper eget duis at. Semper risus in hendrerit gravida. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Dis parturient montes nascetur ridiculus mus mauris. Elementum tempus egestas sed sed risus pretium quam. Varius quam quisque id diam vel. Eu nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper. Netus et malesuada fames ac turpis egestas maecenas pharetra. Aliquet lectus proin nibh nisl condimentum id. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Ac tortor dignissim convallis aenean et tortor at. Elementum sagittis vitae et leo. Dignissim cras tincidunt lobortis feugiat vivamus. Cursus mattis molestie a iaculis at. Mi proin sed libero enim sed faucibus.
+  </p>
+  <div>
+</main>
+<div class="">
+
+</div>
+
+
+  </body>
+</html>
 
     </form>
   </body>
