--- a/formulaire1.html
+++ b/formulaire1.html
@@ -3,6 +3,16 @@
 <head>
 	<title>Mon formulaire</title>
 </head>
+<link rel="stylesheet" type="text/css" href="formulaire1.css">
+<h1>Formulaire de contact</h1>
+<nav>
+  <ul>
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="ingredients.html">Les ingrédients</a></li>
+    <li><a href="produit.html">Produits</a></li>
+    <li><a href="formulaire1.html">Contact</a></li>
+  </ul>
+</nav>
 <body>
   <div class="backvideo">
  <video autoplay loop muted>
@@ -10,8 +20,6 @@
 
  </video>
 </div>
-  <link rel="stylesheet" type="text/css" href="formulaire1.css">
-	<h1>Formulaire de contact</h1>
 	<form action="traitement.php" method="post">
 		<label for="nom">Nom :</label>
 		<input type="text" id="nom" name="nom"><br><br>
