--- a/produit.html
+++ b/produit.html
@@ -14,7 +14,7 @@
        <li><a href="index.html">Accueil</a></li>
        <li><a href="ingredients.html">Les ingrédients</a></li>
        <li><a href="produit.html">Produits</a></li>
-       <li><a href="formulaire.html">Contact</a></li>
+       <li><a href="formulaire1.html">Contact</a></li>
      </ul>
    </nav>
  </body>
